<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stocks</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter stock symbol:</string>

    <string name="last_time_price">Last Trade Price:</string>
    <string name="name_text">Name:</string>
    <string name="change">Change:</string>
    <string name="week_Range">52 Week Change:</string>
    <string name="time">Last Trade Time:</string>
</resources>
